# simpleini

./: CMakeLists.txt  LICENSE  README.md
simpleini/: simpleini.h
tests/: readwrite-tests.cpp  simpleini-tests.cpp
